--- a/rails-basics-ru/quality/test/fixtures/bulletins.yml
+++ b/rails-basics-ru/quality/test/fixtures/bulletins.yml
@@ -1,10 +1,10 @@
-bulletin_1:
+one:
   id: 1
   title: Title 1
   body: Body 1
   published: true
 
-bulletin_2:
+two:
   id: 2
   title: Title 2
   body: Body 2
